# temp-mail

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  api.py  config.py  db.py  mail_ingest.py
app/static/: index.html
deploy/cron/: cleanup-old-mail.cron
deploy/postfix/: aliases.example  main.cf.example  virtual_alias_regexp.example
deploy/systemd/: temp-mail.service
docs/: config-reference.md  dns-setup.md  quickstart.md  temp-mail-domain-switch-operations.md  temp-mail-id-discovery.md  troubleshooting.md  ubuntu-deployment.md
scripts/: apply_postfix_config.sh  bootstrap_ubuntu.sh  cleanup_old_mail.sh  deploy.sh  init_db.py  install_service.sh  post_deploy_report.sh  preflight.sh  run-remote-switch-temp-mail-domain.sh  setup_cron.sh  switch-temp-mail-domain.sh  test_end_to_end.sh
